[gd_scene load_steps=9 format=3 uid="uid://cnounborj62l5"]

[ext_resource type="Theme" uid="uid://cgsclu2i80ogv" path="res://assets/main_theme.tres" id="1_5nxqo"]
[ext_resource type="FontFile" uid="uid://bgu8qc0aapy2h" path="res://assets/textures/kenney_ui-pack/Font/Kenney Future.ttf" id="1_broqj"]
[ext_resource type="Script" path="res://src/ui/widgets/game_stats_ui.gd" id="2_mb136"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1dmrx"]
bg_color = Color(0.141176, 0.796277, 0.525643, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.00615441, 0.502318, 0.294534, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 4
expand_margin_left = 16.0
expand_margin_top = 16.0
expand_margin_right = 16.0
expand_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_clalf"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.645348, 0.645423, 0.693814, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 4

[sub_resource type="Animation" id="Animation_ec1vx"]
resource_name = "color_loop"
length = 5.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/VBox/PanelContainer:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(-0.5, -0.5, -0.5, -0.5, -0.5, -0.5),
"update": 0,
"values": [Color(0, 1, 0.847059, 1), Color(1, 0.111817, 0.609044, 1), Color(0.00784314, 0.0156863, 1, 1), Color(1, 1, 0, 1), Color(0.875157, 0.123661, 1, 1), Color(0, 1, 0.847059, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/VBox/PanelContainer/Label:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1.5, 2.5, 3.5, 4.5, 5.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.890904, 0.00010377, 0.297062, 1), Color(2.02149e-06, 0.535263, 0.660011, 1), Color(0.839316, 2.75308e-05, 0.597907, 1), Color(0.254278, 0.33983, 1, 1), Color(0.152941, 1, 0, 1), Color(0.890904, 0.000103772, 0.297062, 1)]
}

[sub_resource type="Animation" id="Animation_bwu7m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/VBox/PanelContainer:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/VBox/PanelContainer/Label:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_14jdd"]
_data = {
"RESET": SubResource("Animation_bwu7m"),
"color_loop": SubResource("Animation_ec1vx")
}

[node name="GameStatsUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_5nxqo")
script = ExtResource("2_mb136")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 333.0
offset_bottom = 239.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1dmrx")

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_clalf")

[node name="Label" type="Label" parent="Panel/VBox/PanelContainer"]
layout_mode = 2
theme = ExtResource("1_5nxqo")
text = "FOOD PUSHER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PromosLabels" type="HBoxContainer" parent="Panel/VBox"]
modulate = Color(1, 0.800183, 0, 1)
layout_mode = 2

[node name="Name" type="Label" parent="Panel/VBox/PromosLabels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_broqj")
theme_override_font_sizes/font_size = 32
text = "Promos:"

[node name="Value" type="Label" parent="Panel/VBox/PromosLabels"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_broqj")
theme_override_font_sizes/font_size = 31
text = "0"
horizontal_alignment = 2

[node name="ThrowsLabels" type="HBoxContainer" parent="Panel/VBox"]
modulate = Color(1, 0.800183, 0, 1)
layout_mode = 2

[node name="Name" type="Label" parent="Panel/VBox/ThrowsLabels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_broqj")
theme_override_font_sizes/font_size = 32
text = "Throws:"

[node name="Value" type="Label" parent="Panel/VBox/ThrowsLabels"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_broqj")
theme_override_font_sizes/font_size = 31
text = "0"
horizontal_alignment = 2

[node name="RewardsLabels" type="HBoxContainer" parent="Panel/VBox"]
modulate = Color(1, 0.800183, 0, 1)
layout_mode = 2

[node name="Name" type="Label" parent="Panel/VBox/RewardsLabels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_broqj")
theme_override_font_sizes/font_size = 32
text = "Rewards:"

[node name="Value" type="Label" parent="Panel/VBox/RewardsLabels"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_broqj")
theme_override_font_sizes/font_size = 31
text = "0"
horizontal_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_14jdd")
}
autoplay = "color_loop"
